# algos

./: README.md  go.mod  main.go
.github/workflows/: CI.yml  test.yml
cci/: cci.go  cci_test.go  check_premutations.go  delete_middle_node.go  is_unique.go  kth_to_last.go  matrix_rotate.go  one_away.go  palindrome_permutation.go  partition.go  remove_dup.go  string_compression.go  string_rotation.go  urlfy.go  zero_matrix.go
dynamicprogramming/: dynamic_programming_test.go  rod_cutting_problem.go  subsetsum.go
graph/: graph.go  mincut_test.go
leetcode/: climb_stairs.go  find_disappering_numbers.go  leetcode_test.go  missing_number.go
matrices/: int_matrix_test.go  matrices.go  verify_matrix_muliplication.go  verify_muliplication_test.go
python/: pyproject.toml
python/ch1/: check_permutations.py  is_unique.py  one_away.py  palindrome.py  rotate_martix.py  string_compression.py  urlify.py
python/ch2/: __init__.py  delete_middle_node.py  intersection.py  loop_detection.py  palindrome.py  partition.py  remove_dups.py  return_kth_last.py  sum_lists.py
python/ch3/: __init__.py  min_stack.py  queue_via_stacks.py  sort_stack.py  stack_of_plates.py
python/tests/: ch1_test.py  ch2_test.py  ch3_test.py
randomized/: primarity.go  primarity_test.go
randomized/array/: find_max_occuring_ids.go  find_max_occuring_ids_test.go  mapping_probablites_test.go  quickselect.go  (+4 more)
sorts/: bucket_sort.go  counting_sort.go  heap_sort.go  quick_sort.go  sorts_test.go
structures/: heap.go  heap_test.go  linked_list.go  priority_queue.go  queue.go  stack.go  structures_test.go
(+7 files in other folders)
